--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "Project",
-    "2",
-    "brogrammers"
-  ],
+  "keywords": ["Project", "2", "brogrammers"],
   "author": "Daniel Olivas",
   "license": "ISC",
   "devDependencies": {
@@ -20,7 +16,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "mysql2": "^1.5.3",
+    "nodemon": "^1.17.4",
     "path": "^0.12.7",
     "sequelize": "^4.37.7"
   }
