--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "package.json for Project 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "Project",
@@ -18,10 +19,19 @@
     "mocha": "^5.1.1"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "mysql2": "^1.5.3",
     "path": "^0.12.7",
     "sequelize": "^4.37.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bsilvall/Project-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bsilvall/Project-2/issues"
+  },
+  "homepage": "https://github.com/bsilvall/Project-2#readme"
 }
