--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^1.5.3",
     "nodemon": "^1.17.4",
     "path": "^0.12.7",
+    "sass": "^1.3.2",
     "sequelize": "^4.37.7"
   }
 }
