--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "project2",
   "version": "1.0.0",
   "description": "package.json for Project 2",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [
-    "Project",
-    "2",
-    "brogrammers"
-  ],
+  "keywords": ["Project", "2", "brogrammers"],
   "author": "Daniel Olivas",
   "license": "ISC",
   "devDependencies": {
