--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass --watch scss -o css",
     "start": "node server.js"
   },
   "keywords": [
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compile-sass": "0.0.5",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0",
