--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch scss -o css",
+    "scss": "node-sass --watch ./public/assets/scss -o ./public/assets/css",
     "start": "node server.js"
   },
   "keywords": [
